kido items config

--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -93,7 +93,7 @@
     <div class="PlateWrap">
         <section class="itemsA"></section>
         <section class="itemsB"></section>
-        <section class="plateA">
+        <section class="plateA" style="padding-top:2em">
             <img src="./art/Plate_new.png" alt="">
             <div class="items"></div>
         </section>
@@ -135,6 +135,7 @@
             <figure class="box"><img src="./art/plate-item.svg" alt="plate item picture"></figure>
 -->
 
+<script src="./app/itemsConfig.js"></script>
 <script src="./app/plate.js"></script>
 
 <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ FEEDBACK -->
