--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -75,8 +75,8 @@
 <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ COVER -->
 
 <div class="screen use-colors colors--swed-secondary" id="Cover">
-    <header class="box title">
-        <h1>KIDO</h1>
+    <header class="box title" style="color:white;font-size:1.5em;">
+        <h1>kido.one/kid3</h1>
     </header>
     <div class="box" style="text-align:center">
         <h2>Play an learn <br>why avoid <br>burgers and candies</h2>
@@ -84,6 +84,9 @@
     <div class="box" style="display:flex; justify-content:center; gap:2em;">
         <a href="#Plate" class="button green">PLAY</a>
         <a href="../" class="button">HOME PAGE</a>
+    </div>
+    <div class="box" style="display:flex; justify-content:center; gap:2em;">
+        <div><img src="./art/plate-item.svg" alt="" style="width:40vh;"></div>
     </div>
 </div>
 
