--- a/suheno/index.html
+++ b/suheno/index.html
@@ -103,6 +103,9 @@
             </h1>
         </section>
     </header>
+   <div class="box">
+       <h4>bitly.ws/zvui</h4>
+   </div>
 
     <div class="box" style="padding:4em;">
        <div class="box"><h2>School cooks can access <span class="span">recipes</span> and <span class="span">education</span></h2></div>
@@ -117,7 +120,36 @@
 <div class="screen" id="WebApp">
     <header>
         <section class="section" style="display:flex; justify-content:space-between; gap:2rem; ">
-            <h1>Web App</h1>
+            <h1>Web App · <span style="color:var(--link-color)">SUHENU FOCO</span></h1>
+        </section>
+    </header>
+    <div class="box" style="padding:4em;">
+       <div class="box"><h2>Specialized for school menu creators and chefs</h2></div>
+       <div class="box"><h2>Age group and quantity planner</h2></div>
+       <div class="box"><h2>National dietary guidelines</h2></div>
+       <div class="box"><h2>
+       </h2></div>
+        <div class="box" style="display:flex;gap:2rem;">
+            <a href="https://www.figma.com/proto/se0h14ZCPiEapA9oSo0YMO/SUHENU-FOCO?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" style="color:var(--text-color)">
+            <img src="./art/Figma-prototype.png" style="width:50vh;" alt=""></a>
+            <h4>Link 1. <br>Figma prototype
+            <br><br>
+            <i>created at Garage48food, <br>Tartu, January 29`2003</i>
+            </h4>
+        </div>
+       <div class="box" style="display:flex;gap:2rem;">
+           <h3><a href="#Cover" style="color:var(--link-color)">Back</a></h3>
+           <h3><a href="#WebApp" style="color:var(--link-color)">Next</a></h3>
+           <h3>·</h3>
+           <h3><a href="https://www.figma.com/proto/se0h14ZCPiEapA9oSo0YMO/SUHENU-FOCO?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" style="color:var(--link-color)">Run Prototype</a></h3>
+       </div>
+    </div>
+</div>
+
+<div class="screen" id="WebApp" style="display:none">
+    <header>
+        <section class="section" style="display:flex; justify-content:space-between; gap:2rem; ">
+            <h1>Web App · <span style="color:var(--link-color)">SUHENU FOCO</span></h1>
         </section>
     </header>
     <div class="box" style="padding:4em;">
@@ -129,7 +161,10 @@
         <div class="box" style="display:flex;gap:2rem;">
             <a href="https://www.figma.com/proto/se0h14ZCPiEapA9oSo0YMO/SUHENU-FOCO?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" style="color:var(--text-color)">
             <img src="./art/Figma-prototype.png" style="width:50vh;" alt=""></a>
-            <h4>Pic. 1 Figma prototype</h4>
+            <h4>Link 1. <br>Figma prototype
+            <br><br>
+            <i>created at Garage48food, <br>Tartu, January 29`2003</i>
+            </h4>
         </div>
        <div class="box" style="display:flex;gap:2rem;">
            <h3><a href="#Cover" style="color:var(--link-color)">Back</a></h3>
