--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -27,6 +27,12 @@
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [FIRST] -->
     <article c-tools>
+        <section c-hq>
+            <figure>
+                <a c href="https://web.whatsapp.com/"><i>WTS</i></a>
+                <a c href="https://web.telegram.org/"><i>TGR</i></a>
+            </figure>
+        </section>
         <section c-tools>
             <figure>
                 <a href="https://www.google.com/?hl=en">Google</a>
@@ -91,7 +97,7 @@
         <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Sport -->
 
         <section c-ent>
-            <a href="https://www.volleyballworld.tv/home">Volleyball World</a>
+            <a href="https://tv.volleyballworld.com/home">Volleyball World</a>
             <a href="https://www.eurosport.com/watch/snooker/">Eurosport</a>
             <figure>
                 <a href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
