--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -29,8 +29,8 @@
     <article c-tools>
         <section c-hq>
             <figure>
-                <a c href="https://web.whatsapp.com/"><i>WTS</i></a>
-                <a c href="https://web.telegram.org/"><i>TGR</i></a>
+                <a c href="https://web.whatsapp.com/"><i>whatsapp</i></a>
+                <a c href="https://web.telegram.org/"><i>telegram</i></a>
             </figure>
         </section>
         <section c-tools>
@@ -89,8 +89,8 @@
             <figure>
                 <a c href="https://facebook.com/?sk=h_chr"><i>FB</i></a>
                 <a c href="https://www.instagram.com/zinoviasmartfon/">IN</a>
-                <a c href="http://www.youtube.com/"><i>YT</i></a>
-                <a c href="http://www.hattrick.org/"><i>HT</i></a>
+                <a c href="https://www.youtube.com/feed/subscriptions"><i>YT</i></a>
+                <a c href="https://www.hattrick.org/"><i>HT</i></a>
             </figure>
         </section>
 
